# elliptic-curve-cryptography

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  big_int.cpp  big_int.h  main.cpp  modular_int.cpp  modular_int.h  printable.h
.github/workflows/: build-and-test.yml  build.yml  test.yml
src/: CMakeLists.txt  main.cpp
src/ecc/: CMakeLists.txt  big_int.cpp  big_int.h  gmp_ops.h  gmp_rng.cpp  gmp_rng.h  modular_int.cpp  modular_int.h  operations.h  point.cpp  point.h
src/ecc/formatters/: big_int_formatter.h  modular_int_formatter.h  point_formatter.h
src/tests/: CMakeLists.txt  ecc_gens.h  gmp_gens.h  test_big_int.cpp  test_modular_int.cpp
